<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#EEEEEE"
        android:paddingTop="30dp"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/ans"
        android:textAlignment="textEnd"
        android:textColor="@color/topbar"
        android:textSize="42sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="135dp"
            android:textSize="42sp"
            android:background="@drawable/btnback"
            android:text="@string/seven" />


        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/eight" />


        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:background="@drawable/btnback"
            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/nine" />


        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:background="@drawable/btnback"
            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/divide" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/four" />


        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:textSize="42sp"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:text="@string/six" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/multiply" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button12"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/one" />


        <Button
            android:id="@+id/button11"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/two" />

        <Button
            android:id="@+id/button10"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/three" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:background="@drawable/btnback"
            android:textSize="42sp"
            android:layout_height="135dp"
            android:text="@string/subtract" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/button16"
            android:layout_width="100dp"
            android:background="@drawable/btnback"


            android:layout_height="135dp"
            android:textSize="42sp"

            android:text="@string/dot" />
        <Button
            android:id="@+id/button15"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button14"
            android:layout_width="100dp"
            android:background="@drawable/btnback"


            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/C" />
        <Button
            android:id="@+id/button13"
            android:layout_width="100dp"
            android:background="@drawable/btnback"

            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:textSize="42sp"
            android:text="@string/equal"
            android:background="@drawable/btnback" />
    </LinearLayout>
</LinearLayout>
