<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#EEEEEE"
        android:gravity="center_vertical|end"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/ans"
        android:textAlignment="textEnd"
        android:textColor="@color/topbar"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/textView5"

        android:layout_marginTop="-4dp"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/button22"
        android:background="@drawable/btnback"
        android:text="@string/seven"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button22"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@+id/button23"
        android:background="@drawable/btnback"
        android:text="@string/eight"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button23"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:textSize="42sp"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="0dp"
        android:text="@string/nine"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/button24" />

    <Button
        android:id="@+id/button24"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:text="@string/divide"
        android:textSize="42sp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp" />

    <Button
        android:id="@+id/button25"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/button24"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/btnback"
        android:text="@string/four"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button26"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/button23"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toRightOf="@id/button25"
        android:background="@drawable/btnback"
        android:text="@string/five"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button27"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/button22"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toRightOf="@+id/button26"
        android:background="@drawable/btnback"
        android:text="@string/six"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button28"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/button24"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button27"
        android:layout_toRightOf="@+id/button27"
        android:background="@drawable/btnback"
        android:text="@string/multiply"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button29"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button25"
        android:layout_alignParentStart="true"
        android:text="@string/one" />

    <Button
        android:id="@+id/button30"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button26"

        android:layout_toEndOf="@+id/button29"
        android:text="@string/two" />

    <Button
        android:id="@+id/button31"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button27"

        android:layout_toEndOf="@+id/button30"
        android:text="@string/three" />

    <Button
        android:id="@+id/button32"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button28"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button31"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/button33"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button29"
        android:layout_marginTop="0dp"
        android:text="@string/dot" />

    <Button
        android:id="@+id/button34"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button30"
        android:layout_toEndOf="@+id/button33"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button35"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button31"
        android:layout_toEndOf="@+id/button34"
        android:text="@string/C" />

    <Button
        android:id="@+id/button36"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:background="@drawable/btnback"
        android:layout_below="@+id/button32"
        android:layout_toEndOf="@+id/button35"
        android:text="@string/plus" />

    <Button
        android:id="@+id/button37"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_below="@+id/button34"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btnback"
        android:text="@string/equal"
        android:textSize="42sp" />

</RelativeLayout>