<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="130dp"
        android:width="101dp"
        android:background="#EEEEEE"
        android:paddingTop="30dp"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/ans"
        android:textAlignment="textEnd"
        android:textColor="@color/topbar"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:background="@drawable/btnback"
        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"

        android:text="@string/nine"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/eight"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:textSize="42sp"
        android:background="@drawable/btnback"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button6"
        android:textSize="42sp"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:text="@string/six"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/five"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <!--3rd row of buttons-->
    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:textSize="42sp"
        android:layout_height="130dp"
        android:text="@string/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/three"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <!-- 4th line of buttons -->

    <Button
        android:id="@+id/button13"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button14"
        android:layout_width="100dp"
        android:background="@drawable/btnback"


        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/C"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button15"
        android:layout_width="100dp"
        android:background="@drawable/btnback"

        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/zero"

        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button16"
        android:layout_width="100dp"
        android:background="@drawable/btnback"


        android:layout_height="130dp"
        android:textSize="42sp"

        android:text="@string/dot"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button17"
        android:layout_width="3107dp"
        android:layout_height="130dp"
        android:textSize="42sp"
        android:text="@string/equal"
        android:background="@drawable/btnback"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15"
        app:layout_constraintVertical_bias="0.988" />

</androidx.constraintlayout.widget.ConstraintLayout>